add the change